[project]
name = "30122-project-treehuggers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopandas>=1.0.1",
    "googlemaps>=4.10.0",
    "httpx>=0.28.1",
    "ipykernel>=6.29.5",
    "jellyfish>=1.1.3",
    "keplergl>=0.3.7",
    "matplotlib>=3.10.0",
    "nbconvert>=7.16.6",
    "osmnx>=2.0.1",
    "pandas>=2.2.3",
    "pytest>=8.3.4",
]
