[project]
name = "green_spaces"
version = "0.1.0"
description = "Affordable Housing and Green Space Equity in Chicago"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "cenpy>=1.0.1",
    "dash>=2.18.2",
    "dash-bootstrap-components>=1.7.1",
    "geojson>=3.2.0",
    "geopandas>=1.0.1",
    "googlemaps>=4.10.0",
    "httpx>=0.28.1",
    "ipykernel>=6.29.5",
    "jellyfish>=1.1.3",
    "keplergl>=0.3.7",
    "matplotlib>=3.10.0",
    "nbconvert>=7.16.6",
    "osmnx>=2.0.1",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "pytest>=8.3.4",
    "python-levenshtein>=0.27.1",
    "rtree>=1.0.1",
    "ruff>=0.9.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
